@@ -1,0 +1,3 @@
+*.bmp
+*.gif
+*.png
